--- a/climate_control/requirements-mac.txt
+++ b/climate_control/requirements-mac.txt
@@ -24,3 +24,9 @@ python-dateutil==2.8.2
 # - The code handles its absence gracefully (simulation mode)
 # - On Raspberry Pi, install the full requirements.txt instead
 
+# Extras needed for Flask + SocketIO runtime on Mac development
+# Include CORS and an eventlet engine for SocketIO testing
+Flask-Cors==3.0.10
+python-engineio==4.5.0
+eventlet==0.33.3
+
