--- a/climate_control/requirements.txt
+++ b/climate_control/requirements.txt
@@ -18,3 +18,9 @@ PyYAML==6.0.1
 
 # Utilities
 python-dateutil==2.8.2
+
+# Extras needed for Flask + SocketIO runtime
+# CORS for the small web UI and eventlet for production SocketIO async worker
+Flask-Cors==3.0.10
+python-engineio==4.5.0
+eventlet==0.33.3
